--- a/email-aps edicao/Aproveite.html
+++ b/email-aps edicao/Aproveite.html
@@ -111,12 +111,11 @@
                            color:#1F2937;
                            letter-spacing:0.4px;
                            text-transform:uppercase;">
-                                    <span style="color:#005A8C;">Não acabou:</span>
-                                    <span style="color:#F94336;">ainda dá para aproveitar!</span>
+                                    <span style="color:#005A8C;">Promoções</span>
+                                    <span style="color:#F94336;"> de Radiador imperdíveis neste final de
+                                        mês!</span>
                                 </h1>
-                                <p style="margin:6px 0 0;font-size:16px;line-height:24px;color:#444;font-weight:500;">
-                                    Descontos exclusivos para você respirar alívio neste verão.
-                                </p>
+                                <br>
                             </td>
                         </tr>
 
