--- a/email-aps edicao/Aproveite.html
+++ b/email-aps edicao/Aproveite.html
@@ -111,11 +111,12 @@
                            color:#1F2937;
                            letter-spacing:0.4px;
                            text-transform:uppercase;">
-                                    <span style="color:#005A8C;">Promoções</span>
-                                    <span style="color:#F94336;"> de Radiador imperdíveis neste final de
-                                        mês!</span>
+                                    <span style="color:#005A8C;">Não acabou:</span>
+                                    <span style="color:#F94336;">ainda dá para aproveitar!</span>
                                 </h1>
-                                <br>
+                                <p style="margin:6px 0 0;font-size:16px;line-height:24px;color:#444;font-weight:500;">
+                                    Descontos exclusivos para você respirar aliviado.
+                                </p>
                             </td>
                         </tr>
 
@@ -142,7 +143,7 @@
                                                 line-height: 1.2;
                                                 padding: 0;
                                             ">
-                                    🏆 TOP 5 COMPRESSORES
+                                    TOP 5 COMPRESSORES
                                 </p>
                             </td>
                         </tr>
@@ -307,7 +308,7 @@
                                                             line-height: 1.2;
                                                             padding: 0;
                                                         ">
-                                    🏆 TOP 5 CONDENSADORES
+                                    TOP 5 CONDENSADORES
                                 </p>
                             </td>
                         </tr>
@@ -469,7 +470,6 @@
 
                         <!-- CTA PRINCIPAL MODERNO -->
                         <style>
-                            /* hover só é aplicado em clientes que o suportam (webmail/browser) */
                             a.cta-button:hover {
                                 background: linear-gradient(90deg, #FF6B00 0%, #F94336 100%) !important;
                                 color: #ffffff !important;
@@ -480,17 +480,6 @@
 
                         <tr>
                             <td style="text-align:center;padding:22px 20px 26px;">
-                                <!--[if mso]>
-                  <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" href="https://wa.me/551936344855"
-                  style="height:46px;v-text-anchor:middle;width:300px;" arcsize="12%" strokecolor="none"
-                  fillcolor="#F94336">
-                    <w:anchorlock/>
-                    <center style="color:#ffffff;font-family:Arial,sans-serif;font-size:16px;font-weight:bold;">
-                      FALAR COM UM ESPECIALISTA
-                    </center>
-                  </v:roundrect>
-                <![endif]-->
-                                <!--[if !mso]><!-- -->
                                 <a href="https://wa.me/551936344855" target="_blank" class="cta-button" style="display:inline-block;
                          background:linear-gradient(90deg,#F94336 0%,#FF6B00 100%);
                          color:#ffffff;
@@ -504,7 +493,7 @@
                          box-shadow:0 4px 10px rgba(0,0,0,0.15);
                          transition:all 0.4s ease;
                          cursor:pointer;">
-                                    💬 Falar com um Especialista
+                                    Falar com um Especialista
                                 </a>
                                 <!--<![endif]-->
                                 <p style="font-size:14px;
@@ -530,7 +519,7 @@
                                                 style="background:#F9FAFB;border:1px solid #E5E7EB;border-radius:12px;box-shadow:0 2px 5px rgba(0,0,0,0.05);">
                                                 <tr>
                                                     <td height="60" style="height:60px;text-align:center;">
-                                                        <span style="font-size:28px;">🚚</span>
+
                                                         <p
                                                             style="margin:6px 0 0;font-size:15px;font-weight:700;color:#1F2937;">
                                                             Entrega Ágil</p>
@@ -552,7 +541,7 @@
                                                 style="background:#F9FAFB;border:1px solid #E5E7EB;border-radius:12px;box-shadow:0 2px 5px rgba(0,0,0,0.05);">
                                                 <tr>
                                                     <td height="60" style="height:60px;text-align:center;">
-                                                        <span style="font-size:28px;">⚙</span>
+
                                                         <p
                                                             style="margin:6px 0 0;font-size:15px;font-weight:700;color:#1F2937;">
                                                             Marcas Originais</p>
@@ -574,7 +563,7 @@
                                                 style="background:#F9FAFB;border:1px solid #E5E7EB;border-radius:12px;box-shadow:0 2px 5px rgba(0,0,0,0.05);">
                                                 <tr>
                                                     <td height="60" style="height:60px;text-align:center;">
-                                                        <span style="font-size:28px;">💬</span>
+
                                                         <p
                                                             style="margin:6px 0 0;font-size:15px;font-weight:700;color:#1F2937;">
                                                             Suporte
@@ -602,20 +591,9 @@
                           font-weight:700;
                           color:#1F2937;
                           letter-spacing:0.3px;">
-                                    Explore nosso catálogo completo e aproveite as melhores condições do mês
+                                    Explore nosso catálogo completo de radiadores e aproveite as melhores condições
+                                    neste final de mês!
                                 </p>
-
-                                <!--[if mso]>
-                  <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" href="https://apsdistribuidora.com.br"
-                  style="height:46px;v-text-anchor:middle;width:300px;" arcsize="12%" strokecolor="none"
-                  fillcolor="#005A8C">
-                    <w:anchorlock/>
-                    <center style="color:#ffffff;font-family:Arial,sans-serif;font-size:16px;font-weight:bold;">
-                      ACESSAR CATÁLOGO
-                    </center>
-                  </v:roundrect>
-                <![endif]-->
-                                <!--[if !mso]><!-- -->
                                 <a href="https://www.apsdistribuidora.com.br/home" target="_blank" style="display:inline-block;
                          background:linear-gradient(90deg,#005A8C 0%,#007FC2 100%);
                          color:#ffffff;
@@ -629,7 +607,7 @@
                          box-shadow:0 4px 10px rgba(0,0,0,0.15);
                          transition:all 0.4s ease;
                          cursor:pointer;">
-                                    📂 Acessar Catálogo
+                                    Acessar Catálogo
                                 </a>
                                 <!--<![endif]-->
 
