--- a/email-aps edicao/Radiadores.html
+++ b/email-aps edicao/Radiadores.html
@@ -112,12 +112,9 @@
                            color:#1F2937;
                            letter-spacing:0.4px;
                            text-transform:uppercase;">
-                  <span style="color:#005A8C;">Radiadores em Oferta:</span>
-                  <span style="color:#F94336;">Preços por tempo limitado</span>
+                  <span style="color:#005A8C;">RADIADORES LINHA LEVE</span>
+                  <span style="color:#F94336;">PROMOÇÃO EM TODAS AS MARCAS!</span>
                 </h1>
-                <p style="margin:6px 0 0;font-size:16px;line-height:24px;color:#444;font-weight:500;">
-                  O alívio que seu bolso precisava. Descontos exclusivos.
-                </p>
               </td>
             </tr>
 
@@ -163,201 +160,46 @@
 
             <!-- ====== GRADE DE ITENS ====== -->
             <tr>
-              <td style="padding:8px 0px 14px;">
-                <div style="width:100%;max-width:450px;margin:0 auto;display:block;">
-                  <table role="presentation" width="100%" style="border-collapse:collapse;">
-                    <tr>
-                      <td class="stack" width="100%" align="center" valign="top" style="padding:0;">
-                        <table role="presentation" width="100%" style="
-                          border:1px solid #E2E8F0;
-                          border-radius:18px;
-                          background:#ffffff;
-                          box-shadow:0 6px 18px rgba(0,0,0,0.08);
-                          text-align:center;
-                          transition:all 0.3s ease;
-                        ">
-                          <tr>
-                            <td style="padding:0;"> <img src="Imagens APS/imgradiadorestodos.jpeg" alt="RADIADORES"
-                                style="
-                                  display:block;
-                                  margin:0 auto;
-                                  border-radius:14px;
-                                  width:100%; /* Agora a imagem ocupa 100% da largura disponível */
-                                  height:auto; /* A altura será ajustada automaticamente para manter a proporção */
-                                  max-width:100%;
-                                  object-fit:cover;
-                                  box-shadow:0 0 20px rgba(0,90,140,0.25);
-                                  border:2px solid rgba(0,90,140,0.15);
-                                ">
-                            </td>
-                          </tr>
-                        </table>
-                      </td>
-                    </tr>
-                  </table>
-                </div>
-              </td>
-            </tr>
+  <td style="padding:8px 0px 14px;">
+    <div style="width:100%;max-width:700px;margin:0 auto;display:block;">
+      <table role="presentation" width="100%" style="border-collapse:collapse;">
+        <tr>
+          <td class="stack" width="100%" align="center" valign="top" style="padding:0;">
+            <table role="presentation" width="100%" style="
+              border:1px solid #E2E8F0;
+              border-radius:18px;
+              background:#ffffff;
+              box-shadow:0 6px 18px rgba(0,0,0,0.08);
+              text-align:center;
+              transition:all 0.3s ease;
+            ">
+              <tr>
+                <td style="padding:0;">
+                  <img 
+                    src="Imagens APS/imgradiadorestodos.jpeg" 
+                    alt="RADIADORES"
+                    style="
+                      display:block;
+                      margin:0 auto;
+                      border-radius:14px;
+                      width:100%;
+                      height:auto;
+                      max-width: 480px; /* antes era 100% dentro de 450px, agora aumenta */
+                      object-fit:cover;
+                      box-shadow:0 0 20px rgba(0,90,140,0.25);
+                      border:2px solid rgba(0,90,140,0.15);
+                    "
+                  >
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </td>
+</tr>
 
-            <tr>
-              <td style="text-align:center; padding: 40px 0;">
-                <p style="
-                  font-size: 26px;
-                  font-weight: 900;
-                  color: #0f172a;
-                  text-transform: uppercase;
-                  margin: 14px 0 6px;
-                  letter-spacing: 0.8px;
-                  line-height: 1.3;
-                  padding: 0;
-                  font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-                ">
-                  Linha Leve de Radiadores:<br>
-                  <span style="color:#005A8C; font-weight:800;">A Categoria Certa Para o Seu Carro</span>
-                </p>
-
-                <div style="
-                  width: 80px;
-                  height: 3px;
-                  background: linear-gradient(90deg, #F94336, #005A8C);
-                  margin: 10px auto 0;
-                  border-radius: 4px;
-                "></div>
-              </td>
-            </tr>
-
-            <!-- ====== GRADE 3 ITENS ====== -->
-            <tr>
-              <td style="padding:8px 16px 16px;">
-                <div style="width:100%;max-width:640px;margin:0 auto;display:block;">
-                  <table role="presentation" width="100%" style="border-collapse:collapse;">
-                    <tr>
-                      <!-- CARD 1 -->
-                      <td class="stack" width="33.33%" align="center" valign="top" style="padding:8px;">
-                        <table role="presentation" width="100%" style="
-                          border:1px solid #E5E7EB;
-                          border-radius:14px;
-                          background:#ffffff;
-                          box-shadow:0 4px 12px rgba(0,0,0,0.08);
-                          transition:all 0.3s ease;
-                        ">
-                          <tr>
-                            <td style="padding:12px 10px 10px;">
-                              <img src="Imagens APS/imgleve1.jpeg" alt="RADIADOR DE ÁGUA NT-10015.140 NOTUS" width="190"
-                                height="190" style="
-                                     display:block;
-                                     margin:0 auto;
-                                     border-radius:12px;
-                                     width:190px;
-                                     height:190px;
-                                     max-width:100%;
-                                     object-fit:cover;
-                                     box-shadow:0 0 16px rgba(0,90,140,0.25);
-                                     border:2px solid rgba(0,90,140,0.1);
-                                   ">
-                            </td>
-                          </tr>
-                        </table>
-                      </td>
-
-                      <!-- CARD 2 -->
-                      <td class="stack" width="33.33%" align="center" valign="top" style="padding:8px;">
-                        <table role="presentation" width="100%" style="
-                          border:1px solid #E5E7EB;
-                          border-radius:14px;
-                          background:#ffffff;
-                          box-shadow:0 4px 12px rgba(0,0,0,0.08);
-                        ">
-                          <tr>
-                            <td style="padding:12px 10px 10px;">
-                              <img src="Imagens APS/imgleve2.jpg" alt="RADIADOR DE ÁGUA 100312008BR TITANX" width="190"
-                                height="190" style="
-                                     display:block;
-                                     margin:0 auto;
-                                     border-radius:12px;
-                                     width:190px;
-                                     height:190px;
-                                     max-width:100%;
-                                     object-fit:cover;
-                                     box-shadow:0 0 16px rgba(0,90,140,0.25);
-                                     border:2px solid rgba(0,90,140,0.1);
-                                   ">
-                            </td>
-                          </tr>
-                        </table>
-                      </td>
-                    </tr>
-                  </table>
-                </div>
-              </td>
-            </tr>
-
-
-            <tr>
-              <td style="text-align:center; padding: 40px 0;">
-                <p style="
-                              font-size: 26px;
-                              font-weight: 900;
-                              color: #0f172a;
-                              text-transform: uppercase;
-                              margin: 14px 0 6px;
-                              letter-spacing: 0.8px;
-                              line-height: 1.3;
-                              padding: 0;
-                              font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-                            ">
-                  Linha Pesada de Radiadores: <br>
-                  <span style="color:#005A8C; font-weight:800;">A Categoria Certa Para o Seu Caminhão</span>
-                </p>
-
-                <div style="
-                              width: 80px;
-                              height: 3px;
-                              background: linear-gradient(90deg, #F94336, #005A8C);
-                              margin: 10px auto 0;
-                              border-radius: 4px;
-                            "></div>
-              </td>
-            </tr>
-
-            <tr>
-              <td style="padding:12px 14px 8px;">
-
-                <div style="width:100%;max-width:600px;margin:0 auto;display:block;">
-                  <table role="presentation" width="100%" style="border-collapse:collapse;">
-                    <tr>
-                      <!-- CARD 1 -->
-                      <td class="stack" width="33.33%" align="center" valign="top" style="padding:8px;">
-                        <table role="presentation" width="100%"
-                          style="border:1px solid #E5E7EB;border-radius:12px;background:#ffffff;box-shadow:0 2px 6px rgba(0,0,0,0.06);">
-                          <tr>
-                            <td style="padding:10px 10px 0;">
-                              <img src="Imagens APS/imgpesada1.jpg" alt="RADIADOR DE AGUA NT-10015.140 NOTUS"
-                                width="180" height="180"
-                                style="display:block;margin:0 auto;border-radius:10px;width:180px;height:180px;max-width:100%;">
-                            </td>
-                          </tr>
-                        </table>
-                      </td>
-
-                      <!-- CARD 2 -->
-                      <td class="stack" width="33.33%" align="center" valign="top" style="padding:8px;">
-                        <table role="presentation" width="100%"
-                          style="border:1px solid #E5E7EB;border-radius:12px;background:#ffffff;box-shadow:0 2px 6px rgba(0,0,0,0.06);">
-                          <tr>
-                            <td style="padding:10px 10px 0;">
-                              <img src="Imagens APS/imgpesada2.jpg" alt="RADIADOR DE AGUA 100312008BR TITANX"
-                                width="180" height="180"
-                                style="display:block;margin:0 auto;border-radius:10px;width:180px;height:180px;max-width:100%;">
-                            </td>
-                          </tr>
-                        </table>
-                      </td>
-                    </tr>
-                  </table>
-                </div>
-              </td>
-            </tr>
 
 
             <tr>
@@ -373,8 +215,8 @@
                   padding: 0;
                   font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
                 ">
-                  Nosso Portfólio de Marcas<br>
-                  <span style="color:#005A8C; font-weight:800;">Premium em Radiadores</span>
+                  DESCONTOS EM TODAS AS <br>
+                  <span style="color:#005A8C; font-weight:800;">MARCAS</span>
                 </p>
 
                 <div style="
