--- a/email-aps edicao/Radiadores.html
+++ b/email-aps edicao/Radiadores.html
@@ -160,12 +160,12 @@
 
             <!-- ====== GRADE DE ITENS ====== -->
             <tr>
-  <td style="padding:8px 0px 14px;">
-    <div style="width:100%;max-width:700px;margin:0 auto;display:block;">
-      <table role="presentation" width="100%" style="border-collapse:collapse;">
-        <tr>
-          <td class="stack" width="100%" align="center" valign="top" style="padding:0;">
-            <table role="presentation" width="100%" style="
+              <td style="padding:8px 0px 14px;">
+                <div style="width:100%;max-width:700px;margin:0 auto;display:block;">
+                  <table role="presentation" width="100%" style="border-collapse:collapse;">
+                    <tr>
+                      <td class="stack" width="100%" align="center" valign="top" style="padding:0;">
+                        <table role="presentation" width="100%" style="
               border:1px solid #E2E8F0;
               border-radius:18px;
               background:#ffffff;
@@ -173,12 +173,10 @@
               text-align:center;
               transition:all 0.3s ease;
             ">
-              <tr>
-                <td style="padding:0;">
-                  <img 
-                    src="Imagens APS/imgradiadorestodos.jpeg" 
-                    alt="RADIADORES"
-                    style="
+                          <tr>
+                            <td style="padding:0;">
+                              <img src="https://w7startup.com.br/ImagensAPS/imgradiadorestodos.jpeg" alt="RADIADORES"
+                                style="
                       display:block;
                       margin:0 auto;
                       border-radius:14px;
@@ -188,17 +186,16 @@
                       object-fit:cover;
                       box-shadow:0 0 20px rgba(0,90,140,0.25);
                       border:2px solid rgba(0,90,140,0.15);
-                    "
-                  >
-                </td>
-              </tr>
-            </table>
-          </td>
-        </tr>
-      </table>
-    </div>
-  </td>
-</tr>
+                    ">
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
+                </div>
+              </td>
+            </tr>
 
 
 
