--- a/email-aps edicao/Radiadores.html
+++ b/email-aps edicao/Radiadores.html
@@ -239,8 +239,7 @@
                           style="border:1px solid #E5E7EB;border-radius:12px;background:#ffffff;box-shadow:0 2px 6px rgba(0,0,0,0.06);">
                           <tr>
                             <td style="padding:10px;text-align:center;">
-                              <img
-                                src="https://aws-gamapecas-images-parts.s3.us-east-2.amazonaws.com/variants/hdfwbr0fx2n12v1e2g8hau8spehu/904828fc1fd9d2fe9df1298cc4a36c8ce99c7a163bfe393e4c041e650ae99d69"
+                              <img src="https://images.seeklogo.com/logo-png/14/1/visconde-logo-png_seeklogo-149734.png"
                                 alt="Radiador Visconde-Modine"
                                 style="display:inline-block;width:160px;height:auto;border-radius:10px;max-width:100%;margin:auto;">
                             </td>
@@ -338,9 +337,8 @@
                       style="border:1px solid #E5E7EB;border-radius:12px;background:#ffffff;box-shadow:0 2px 6px rgba(0,0,0,0.06);">
                       <tr>
                         <td style="padding:10px 10px 0;">
-                          <img
-                            src="https://aws-gamapecas-images-parts.s3.us-east-2.amazonaws.com/variants/u2xn4evqzuswdtvxuj1ze54ly3ww/904828fc1fd9d2fe9df1298cc4a36c8ce99c7a163bfe393e4c041e650ae99d69"
-                            alt="RADIADOR MAHLE" width="180" height="180"
+                          <img src="https://baixecatalogo.com.br/api/v1/static/imgs/logos/378.png" alt="RADIADOR MAHLE"
+                            width="180" height="180"
                             style="display:block;margin:0 auto;border-radius:10px;width:180px;height:180px;max-width:100%;">
                         </td>
                       </tr>
