--- a/email-aps edicao/Aditivo.html
+++ b/email-aps edicao/Aditivo.html
@@ -247,21 +247,21 @@
                         <tr>
                           <td style="text-align:center;">
                             <div style="
-                              background:#0072C6;
-                              width:40px;
-                              height:40px;
-                              border-radius:10px;
+                              width:60px;
+                              height:60px;
                               margin:0 auto 10px;
                               display:flex;
                               align-items:center;
                               justify-content:center;
-                              font-weight:700;
-                              color:#FFFFFF;
-                              font-size:16px;
+                              font-weight:800;
+                              color:#0072C6;
+                              font-size:32px;
                               font-family:Arial, sans-serif;
                             ">
                               1
                             </div>
+
+
                             <p style="margin:0;font-size:14px;font-weight:600;color:#1F2937;">
                               Radiadores
                             </p>
@@ -280,21 +280,20 @@
                         <tr>
                           <td style="text-align:center;">
                             <div style="
-                              background:#0072C6;
-                              width:40px;
-                              height:40px;
-                              border-radius:10px;
+                              width:60px;
+                              height:60px;
                               margin:0 auto 10px;
                               display:flex;
                               align-items:center;
                               justify-content:center;
-                              font-weight:700;
-                              color:#FFFFFF;
-                              font-size:16px;
+                              font-weight:800;
+                              color:#0072C6;
+                              font-size:32px;
                               font-family:Arial, sans-serif;
                             ">
                               2
                             </div>
+
                             <p style="margin:0;font-size:14px;font-weight:600;color:#1F2937;">
                               Compressores
                             </p>
@@ -316,21 +315,20 @@
                         <tr>
                           <td style="text-align:center;">
                             <div style="
-                              background:#0072C6;
-                              width:40px;
-                              height:40px;
-                              border-radius:10px;
+                              width:60px;
+                              height:60px;
                               margin:0 auto 10px;
                               display:flex;
                               align-items:center;
                               justify-content:center;
-                              font-weight:700;
-                              color:#FFFFFF;
-                              font-size:16px;
+                              font-weight:800;
+                              color:#0072C6;
+                              font-size:32px;
                               font-family:Arial, sans-serif;
                             ">
                               3
                             </div>
+
                             <p style="margin:0;font-size:14px;font-weight:600;color:#1F2937;">
                               Eletroventiladores
                             </p>
@@ -349,21 +347,20 @@
                         <tr>
                           <td style="text-align:center;">
                             <div style="
-                              background:#0072C6;
-                              width:40px;
-                              height:40px;
-                              border-radius:10px;
+                              width:60px;
+                              height:60px;
                               margin:0 auto 10px;
                               display:flex;
                               align-items:center;
                               justify-content:center;
-                              font-weight:700;
-                              color:#FFFFFF;
-                              font-size:16px;
+                              font-weight:800;
+                              color:#0072C6;
+                              font-size:32px;
                               font-family:Arial, sans-serif;
                             ">
                               4
                             </div>
+
                             <p style="margin:0;font-size:14px;font-weight:600;color:#1F2937;">
                               Condensadores
                             </p>
@@ -472,12 +469,6 @@
                         style="background:#F9FAFB;border:1px solid #E5E7EB;border-radius:12px;box-shadow:0 2px 5px rgba(0,0,0,0.05);">
                         <tr>
                           <td height="80" style="height:80px;text-align:center;padding-top:12px;">
-                            <!-- Ícone Caminhão (preenchido) -->
-                            <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 24 24"
-                              fill="#0072C6">
-                              <path
-                                d="M20 8h-3V4a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v13a2 2 0 0 0 2 2h1a3 3 0 1 0 6 0h4a3 3 0 1 0 6 0h1a1 1 0 0 0 1-1v-5l-3-5zm1 9h-1a3 3 0 0 0-6 0h-4a3 3 0 0 0-6 0H3V5h12v4h4l2 4v4z" />
-                            </svg>
                             <p style="margin:8px 0 0;font-size:15px;font-weight:700;color:#1F2937;">
                               Entrega Ágil
                             </p>
@@ -498,12 +489,6 @@
                         style="background:#F9FAFB;border:1px solid #E5E7EB;border-radius:12px;box-shadow:0 2px 5px rgba(0,0,0,0.05);">
                         <tr>
                           <td height="80" style="height:80px;text-align:center;padding-top:12px;">
-                            <!-- Ícone Medalha (preenchido) -->
-                            <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 24 24"
-                              fill="#0072C6">
-                              <path
-                                d="M12 1a9 9 0 1 0 0 18 9 9 0 0 0 0-18zm0 2a7 7 0 1 1 0 14A7 7 0 0 1 12 3zm2 11.268V21l-2-1-2 1v-6.732a5.002 5.002 0 1 0 4 0z" />
-                            </svg>
                             <p style="margin:8px 0 0;font-size:15px;font-weight:700;color:#1F2937;">
                               Marcas Originais
                             </p>
@@ -524,12 +509,6 @@
                         style="background:#F9FAFB;border:1px solid #E5E7EB;border-radius:12px;box-shadow:0 2px 5px rgba(0,0,0,0.05);">
                         <tr>
                           <td height="80" style="height:80px;text-align:center;padding-top:12px;">
-                            <!-- Ícone Fone de Ouvido (preenchido) -->
-                            <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 24 24"
-                              fill="#0072C6">
-                              <path
-                                d="M12 2C6.477 2 2 6.477 2 12v5a3 3 0 0 0 3 3h2v-6H5v-2a7 7 0 0 1 14 0v2h-2v6h2a3 3 0 0 0 3-3v-5c0-5.523-4.477-10-10-10z" />
-                            </svg>
                             <p style="margin:8px 0 0;font-size:15px;font-weight:700;color:#1F2937;">
                               Suporte Especializado
                             </p>
